--- a/tabStyle.css
+++ b/tabStyle.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    overflow: hidden;
+}
+
 #tab_controller {
     top: 0;
     margin: 0;
@@ -10,6 +19,11 @@
 
 #tab_controller > * {
     font-family: 'Montserrat';
+}
+
+#controller {
+    padding-bottom: 0.5rem;
+    border-bottom: solid 1px black;
 }
 
 #tab_list, #controller_title {
@@ -26,23 +40,43 @@
 }
 
 .selector {
-    padding: 0;
-    margin: 0;
+    display: flex;
+    align-items: center;
     cursor: pointer;
     user-select: none;
     height: 2.5rem;
-    padding: 0.3rem 1rem;
+    padding: 0.2rem 1.5rem;
     border-radius: 0.7rem ;
+    text-overflow: clip;
+    
     transition: all 0.3s ease;
 }
 
-.selector:hover {
+
+.selector:hover:not(.active_selector) {
     background-color: #f2f2f2;
     /* transform: scale(1.05); */
 }
 
 .active_selector {
     background-color: #d2d2d2;
+}
+
+.active_selector > h3 {
+    display:inline-block; 
+    margin:0;
+}
+
+.selector > h3::after {
+    display:block;
+    content: '';
+    border-bottom: solid 2px #070707;  
+    transform: scaleX(0);  
+    transition: transform 0.3s ease;
+}
+
+.active_selector > h3::after {
+    transform: scaleX(1);
 }
 
 .tab {
